--- a/css/general.css
+++ b/css/general.css
@@ -66,7 +66,7 @@ body {
     text-decoration: none;
     text-transform: uppercase;
     width: 100%;
-    background-color: white;
+    background-color: antiquewhite;
     color: black;
 }
 
@@ -99,7 +99,9 @@ body {
     font-family: "Space Mono";
     background-color: transparent;
     color: white;
-    border-style: none;
+    border-style: solid;
+    border-width: 0.05em;
+    border-color: white;
     cursor: pointer;
     padding: 1em;
     width: 80%;
@@ -126,6 +128,7 @@ body {
 .link:hover {
     background-color: white;
     color: black;
+    transform: scale(0.9);
 }
 
 @media (min-width: 1000px) {
