--- a/css/resume.css
+++ b/css/resume.css
@@ -1,6 +1,14 @@
 .section-container {
     border-style: solid;
     border-width: 0.05em;
+    background-color: transparent;
+    color: white;
+    transition: 0.3s;
+}
+
+.section-container:hover {
+    color: antiquewhite;
+    transform: scale(0.9);
 }
 
 .entry-heading {
