--- a/css/general.css
+++ b/css/general.css
@@ -117,6 +117,7 @@ body {
 .link {
     display: block;
     text-decoration: none;
+    background-color: rgb(114, 114, 114);
     color: white;
     border-style: solid;
     border-width: 0.05em;
