--- a/css/general.css
+++ b/css/general.css
@@ -43,16 +43,32 @@ body {
 
 /* Navigation bar styling */
 #navbar ul {
-    display: flex;
+    display: block;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
 
 .nav-item {
-    display: flex;
+    display: block;
     width: 100%;
     margin: 0;
+}
+
+@media (min-width: 500px) {
+    /* Navigation bar styling */
+    #navbar ul {
+        display: flex;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .nav-item {
+        display: flex;
+        width: 100%;
+        margin: 0;
+    }
 }
 
 .nav-link {
